run docker without shadow jar