@@ -1,16 +1,6 @@
-FROM openjdk:8-jre-alpine
-
-ENV APPLICATION_USER appUser
-ENV APPLICATION_NAME kottage
-RUN adduser -D -g '' $APPLICATION_USER
-
+FROM openjdk:8-jdk
+EXPOSE 8080:8080
 RUN mkdir /app
-RUN chown -R $APPLICATION_USER /app
-
-USER $APPLICATION_USER
-
-COPY ./build/libs/$APPLICATION_NAME.jar /app/app.jar
-COPY ./resources/graphql /app/resources/graphql
-WORKDIR /app
-
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "app.jar"]
+COPY ./build/install/kottage/ /app/
+WORKDIR /app/bin
+CMD ["./kottage"]
